cmake_minimum_required(VERSION 3.5)
project (cli)

install(FILES eresseacli TYPE BIN
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)
install(DIRECTORY . DESTINATION "libexec" FILES_MATCHING PATTERN "eressea-*"
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)
